// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SwaggerUI Component > should render correctly { css: '.custom { color: red; }' } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><style>.custom { color: red; }</style><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly { cssUrls: [ 'https://example.com/custom.css' ] } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><style rel=\\"stylesheet\\" href=\\"https://example.com/custom.css\\"></style><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly { js: 'console.log("custom script");' } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script><script>console.log(\\"custom script\\");</script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly { jsUrls: [ 'https://example.com/custom.js' ] } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script><script src=\\"https://example.com/custom.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly { title: 'title' } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>title</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly { ui: { version: '5.7.2' } } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist@5.7.2/swagger-ui.css\\"/><script src=\\"https://unpkg.com/swagger-ui-dist@5.7.2/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly { url: 'https://example.com/api.json' } 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://example.com/api.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;

exports[`SwaggerUI Component > should render correctly {} 1`] = `
"<html lang=\\"en\\"><head><meta charset=\\"utf-8\\"/><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\"/><meta name=\\"description\\" content=\\"SwaggerUI\\"/><title>SwaggerUI</title><link rel=\\"stylesheet\\" href=\\"https://unpkg.com/swagger-ui-dist/swagger-ui.css\\"/><script src=\\"https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js\\" crossorigin=\\"true\\"></script></head><body><div id=\\"swagger-ui\\"></div><script>
    window.onload = () => {
      window.ui = SwaggerUIBundle({\\"url\\":\\"https://petstore3.swagger.io/api/v3/openapi.json\\",\\"dom_id\\":\\"#swagger-ui\\"});
    };
  </script></body></html>"
`;
